--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,20 @@
 .slots{
     display: flex;
-    gap: 4%;
-    justify-content: center;
-    padding-left: 100px;
+    gap: 5em;
 }
 html{
     font-family: "zilla slab";
+    background: lightgray;
 }
-h1{
-    text-align: center;
-}
-body{
-    background-color: lightgray;
-}
-#bets{
+.playSlots{
     display: flex;
-    gap: 4%;
+    flex-direction: column;
     justify-content: center;
-}
-
-h2{
-text-align: center;
-}
-
-.bal{
-    text-align: center;
-    margin-top: 50px;
+    align-items: center;
+    justify-self: center;
+    border: 1px solid black;
+    background: lightseagreen;
+    width: 50%;
+    margin: 4em;
+    height: 20em;
 }
